--- a/src/com/hermant/gui/Layout.form
+++ b/src/com/hermant/gui/Layout.form
@@ -22,7 +22,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none" title="Y"/>
+            <border type="none" title="R"/>
             <children>
               <grid id="2e053" binding="output_panel_0" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
@@ -44,7 +44,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none" title="Cb"/>
+            <border type="none" title="G"/>
             <children>
               <grid id="abd5a" binding="output_panel_1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
@@ -66,7 +66,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none" title="Cr"/>
+            <border type="none" title="B"/>
             <children>
               <grid id="23e56" binding="output_panel_2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
@@ -137,6 +137,7 @@
                 </constraints>
                 <properties>
                   <model>
+                    <item value="RGB"/>
                     <item value="YCbCr"/>
                     <item value="HSV"/>
                     <item value="Lab"/>
